--- a/LGSTrackingSystem.Domain/LGSTrackingSystem.Domain.csproj
+++ b/LGSTrackingSystem.Domain/LGSTrackingSystem.Domain.csproj
@@ -51,7 +51,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
     <Compile Include="Models\Admin.cs" />
     <Compile Include="Models\Exam.cs" />
     <Compile Include="Models\Student.cs" />
@@ -61,6 +60,9 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Interfaces\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
