--- a/LGSTrackingSystem.Services/LGSTrackingSystem.Services.csproj
+++ b/LGSTrackingSystem.Services/LGSTrackingSystem.Services.csproj
@@ -51,7 +51,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
     <Compile Include="DBContext\LGSTrackingDBContext.cs" />
     <Compile Include="Migrations\202505021443089_initialMigration.cs" />
     <Compile Include="Migrations\202505021443089_initialMigration.Designer.cs">
@@ -59,6 +58,11 @@
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\AdminService.cs" />
+    <Compile Include="Services\ExamService.cs" />
+    <Compile Include="Services\Service.cs" />
+    <Compile Include="Services\StudentService.cs" />
+    <Compile Include="Services\UserService.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
